--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,16 +6,18 @@ services:
     ports:
       - 3306:3306
   api:
-    build: ./api
+    build: ./Api
     container_name: api
     depends_on:
       - database
+      - migration
     ports:
       - "5182:80"
   front:
     build: ./web
     container_name: front
     depends_on:
+      - migration
       - api
       - database
     ports:
@@ -24,6 +26,4 @@ services:
     build: .
     container_name: migration
     depends_on:
-      - front
-      - api
       - database
